# pyspebt

./: README.md  pyproject.toml
src/pyspebt/: __init__.py
src/pyspebt/_system/: __init__.py
src/pyspebt/_system/fileio/: __init__.py  _hdf5.py  _helper.py
src/pyspebt/_system/matrix/raytracing/: __init__.py
src/pyspebt/_system/specification/: __init__.py
src/pyspebt/_system/specification/_yaml/: _helper.py  _parser.py  _validator.py
src/scripts/: generate_ppdfs_loop.py  generate_ppdfs_mpi.py  setupdb.py
src/spebtpy/: __init__.py
src/spebtpy/cmdline/: cli.py  generate.py  render.py
src/spebtpy/cmdline/_generate/: generate_ppdfs_mpi.py  system.py
src/spebtpy/example/: small.yaml
src/spebtpy/fileio/: __init__.py  _hdf5.py
src/spebtpy/system/: __init__.py
src/spebtpy/system/config/: __init__.py
src/spebtpy/system/config/_schema/: __init__.py
src/spebtpy/system/config/_yaml/: __init__.py  _helper.py
src/spebtpy/system/config/_yaml/_plotter/: _mpl.py
src/spebtpy/system/config/schema/: __init__.py
src/spebtpy/system/config/schema/v1/: __init__.py
src/spebtpy/system/config/yaml/: _helper.py  _parser.py
src/spebtpy/system/config/yaml/_plotter/: __init__.py  _mpl.py
src/spebtpy/system/matrix/: __init__.py
src/spebtpy/system/matrix/raytracing/: __init__.py  _getppdf.py  _helper.py  _raytracing.py
