[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Fang Han", email = "fhan0904@gmail.com" }]
dependencies = [
  "numpy",
  "matplotlib",
  "scikit-image",
  "pyyaml",
  "jsonschema",
  "referencing",
]
name = "spebtpy"
dynamic = ["version"]
description = "Python package for the SPEBT project."
readme = "README.md"
requires-python = ">=3.9.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/spebt/spebtpy/"
Issues = "https://github.com/spebt/spebtpy/issues"
Documentation = "https://spebt.github.io/spebtpy/"

[tool.setuptools.packages.find]
where = ["src"]
# include = ["spebtpy"]
namespaces = false

[tool.setuptools.package-data]
"spebtpy.system.config.schema.v1" = ["*.json"]

[project.scripts]
spebtpy = "spebtpy.cmdline.cli:app"
